--- a/Home.css
+++ b/Home.css
@@ -23,6 +23,7 @@ body {
 .header.fixed { 
   width:100%; 
   height:100px;
+  display: flex;
   position:fixed;
   top:0px;
   /* background:#02172d; */
@@ -39,6 +40,7 @@ body {
 }
 
 .header.fixed.active {
+  display: flex;
   z-index: 160; 
   -moz-transform: translateY(0);
   -ms-transform: translateY(0);
@@ -460,5 +462,14 @@ hr {
   position: absolute;
   bottom: 10px;
   right: 20px;
+}
+
+/* ############ responsive css ######################### */
+
+@media screen and(max-width:882px) {
+  .first-container .intro-text{
+    font-size: 1.5rem;
+  }
+  
 }
 
